<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FAFAFA">

    <include layout="@layout/layout_toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:orientation="vertical"
        android:background="@color/color_ffffff">

     <LinearLayout
         android:id="@+id/rl_head"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_60dp"
         android:orientation="horizontal"
         android:paddingRight="@dimen/app_margin"
         android:paddingLeft="@dimen/app_margin">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/dimen_16sp"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:text="@string/head"/>

          <com.paizhong.manggo.widget.CircleImageView
              android:id="@+id/iv_head"
              android:layout_width="@dimen/dimen_45dp"
              android:layout_height="@dimen/dimen_45dp"
              android:layout_gravity="center_vertical"
              android:src="@mipmap/user_head_default"/>

         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_right_arrow"
             android:layout_marginLeft="@dimen/dimen_10dp"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/line_color"
            android:layout_marginLeft="@dimen/app_margin"
            android:layout_marginRight="@dimen/app_margin"/>

    <LinearLayout
        android:id="@+id/rl_nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60dp"
        android:orientation="horizontal"
        android:paddingRight="@dimen/app_margin"
        android:paddingLeft="@dimen/app_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_16sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/nickname"/>

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_16sp"
            android:layout_gravity="center_vertical"
            android:text="----"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_right_arrow"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60dp"
            android:orientation="horizontal"
            android:paddingRight="@dimen/app_margin"
            android:paddingLeft="@dimen/app_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_16sp"
                android:layout_centerVertical="true"
                android:text="@string/phone_num"/>

            <TextView
                android:id="@+id/tv_phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_16sp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="----"/>
        </RelativeLayout>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/line_height"-->
            <!--android:background="@color/line_color"-->
            <!--android:layout_marginLeft="@dimen/app_margin"-->
            <!--android:layout_marginRight="@dimen/app_margin"/>-->


        <RelativeLayout
            android:id="@+id/rl_reset_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60dp"
            android:orientation="horizontal"
            android:paddingRight="@dimen/app_margin"
            android:paddingLeft="@dimen/app_margin"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_16sp"
                android:layout_centerVertical="true"
                android:text="@string/reset_pwd_setting"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_right_arrow"/>
        </RelativeLayout>
    </LinearLayout>

         <TextView
             android:id="@+id/tv_out_login"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_60dp"
             android:textSize="@dimen/dimen_16sp"
             android:textColor="@color/color_FB4F4F"
             android:text="@string/reset_out_login"
             android:gravity="center"
             android:layout_marginTop="@dimen/dimen_10dp"
             android:background="@color/color_ffffff"/>
</LinearLayout>