<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ffffff">

    <LinearLayout
        android:id="@+id/user_bottom_ll_mall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_16sp"
            android:paddingLeft="@dimen/app_margin"
            android:paddingRight="@dimen/app_margin"
            android:paddingTop="@dimen/dimen_20dp"
            android:paddingBottom="@dimen/dimen_20dp"
            android:drawablePadding="@dimen/dimen_15dp"
            android:drawableLeft="@mipmap/user_bottom_mall"
            android:text="@string/user_integral_mall"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/user_bottom_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/color_b2b2b2"
            android:drawablePadding="@dimen/dimen_6dp"
            android:drawableRight="@mipmap/user_right"
            android:layout_marginRight="@dimen/app_margin"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin"/>

    <LinearLayout
        android:id="@+id/user_bottom_ll_quan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_16sp"
            android:paddingLeft="@dimen/app_margin"
            android:paddingRight="@dimen/app_margin"
            android:paddingTop="@dimen/dimen_20dp"
            android:paddingBottom="@dimen/dimen_20dp"
            android:drawableLeft="@mipmap/user_quan"
            android:drawablePadding="@dimen/dimen_15dp"
            android:text="@string/user_quan"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/user_bottom_quan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/color_b2b2b2"
            android:drawablePadding="@dimen/dimen_6dp"
            android:drawableRight="@mipmap/user_right"
            android:layout_marginRight="@dimen/app_margin"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin"/>

    <LinearLayout
        android:id="@+id/user_ll_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_bottom_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_16sp"
            android:paddingLeft="@dimen/app_margin"
            android:paddingRight="@dimen/app_margin"
            android:paddingTop="@dimen/dimen_20dp"
            android:paddingBottom="@dimen/dimen_20dp"
            android:drawableLeft="@mipmap/user_new"
            android:drawablePadding="@dimen/dimen_15dp"
            android:drawableRight="@mipmap/user_right"
            android:text="@string/user_new"/>
    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/line_height"
      android:background="@color/line_color"
      android:layout_marginLeft="@dimen/app_margin"
      android:layout_marginRight="@dimen/app_margin"/>

    <LinearLayout
        android:id="@+id/user_ll_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_bottom_kefu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_16sp"
            android:paddingRight="@dimen/app_margin"
            android:paddingLeft="@dimen/app_margin"
            android:paddingTop="@dimen/dimen_20dp"
            android:paddingBottom="@dimen/dimen_20dp"
            android:drawableLeft="@mipmap/user_service"
            android:drawablePadding="@dimen/dimen_15dp"
            android:drawableRight="@mipmap/user_right"
            android:text="@string/user_zx_kefu"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin"/>


    <LinearLayout
        android:id="@+id/user_ll_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_bottom_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_16sp"
            android:paddingRight="@dimen/app_margin"
            android:paddingLeft="@dimen/app_margin"
            android:paddingTop="@dimen/dimen_20dp"
            android:paddingBottom="@dimen/dimen_20dp"
            android:drawableLeft="@mipmap/user_about"
            android:drawablePadding="@dimen/dimen_15dp"
            android:drawableRight="@mipmap/user_right"
            android:text="@string/user_about_me"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin"/>

    <LinearLayout
        android:id="@+id/user_bottom_ll_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_16sp"
            android:paddingLeft="@dimen/app_margin"
            android:paddingTop="@dimen/dimen_20dp"
            android:paddingBottom="@dimen/dimen_20dp"
            android:drawableLeft="@mipmap/user_version"
            android:drawablePadding="@dimen/dimen_15dp"
            android:text="@string/user_about_update" />

           <ImageView
               android:id="@+id/iv_bottom_version_new"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="@dimen/dimen_2dp"
               android:layout_gravity="center_vertical" />

           <TextView
               android:id="@+id/user_bottom_version"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textSize="@dimen/dimen_14sp"
               android:textColor="@color/color_b2b2b2"
               android:drawablePadding="@dimen/dimen_5dp"
               android:drawableRight="@mipmap/user_right"
               android:gravity="right"
               android:layout_marginRight="@dimen/app_margin"/>
    </LinearLayout>

</LinearLayout>