<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_bottom"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dimen_15dp"
            android:paddingLeft="@dimen/app_margin"
            android:paddingRight="@dimen/app_margin"
            android:paddingTop="@dimen/dimen_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="充值"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:drawableLeft="@mipmap/ic_security"
                android:drawablePadding="@dimen/dimen_5dp"
                android:text="@string/recharge_introduction"
                android:textColor="@color/color_878787"
                android:textSize="@dimen/dimen_11sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dimen_15dp"
            android:paddingLeft="@dimen/app_margin"
            android:paddingRight="@dimen/dimen_15dp"
            android:paddingTop="@dimen/dimen_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trade_xzprice"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="（元）"
                android:textColor="@color/color_878787"
                android:textSize="@dimen/dimen_13sp" />


        </LinearLayout>

        <com.paizhong.manggo.widget.NoScrollGridView
            android:id="@+id/gv_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:listSelector="@color/transparent"
            android:numColumns="4"
            android:paddingBottom="@dimen/dimen_15dp"
            android:paddingLeft="@dimen/app_margin"
            android:paddingRight="@dimen/app_margin"
            android:scrollbars="none"
            android:verticalSpacing="@dimen/dimen_15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/app_margin"
            android:layout_marginRight="@dimen/app_margin"
            android:background="@color/line_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/app_margin"
            android:paddingRight="@dimen/app_margin"
            android:paddingTop="@dimen/dimen_15dp"
            android:text="@string/trade_pay_type"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/lv_pay_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:scrollbars="none" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_55dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_F8F8F8"
                android:gravity="center"
                android:text="取消"
                android:textColor="@color/color_b2b2b2"
                android:textSize="@dimen/dimen_18sp" />

            <TextView
                android:id="@+id/tv_determine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_008EFF"
                android:gravity="center"
                android:text="@string/trade_determine"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/dimen_18sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>