<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_54dp"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin">

        <com.paizhong.manggo.widget.TitleText
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="行情"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/dimen_26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_recharge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen_10dp"
            android:text="充值"
            android:textStyle="bold"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_17sp" />
    </RelativeLayout>


    <com.paizhong.manggo.widget.tab.CommonTabLayoutHor
        android:id="@+id/commonTabLayoutHor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_F7F7F7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff"
        android:paddingLeft="@dimen/dimen_15dp"
        android:paddingRight="@dimen/dimen_15dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_13dp"
            android:layout_marginBottom="@dimen/dimen_13dp"
            android:text="@string/market_pzcode"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_13dp"
            android:layout_marginBottom="@dimen/dimen_13dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/market_newprice"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_14sp" />

        <LinearLayout
            android:id="@+id/ll_change_range"
            android:layout_width="@dimen/dimen_70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_13dp"
            android:layout_marginBottom="@dimen/dimen_13dp"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_change_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/change"
                android:scaleType="fitCenter"/>

            <TextView
                android:id="@+id/tv_change_range_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_4dp"
                android:text="@string/market_zdf"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_14sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color" />

    <com.paizhong.manggo.widget.FixRefreshLayout
        android:id="@+id/smart_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnableLoadMore="false">

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_ffffff" />
    </com.paizhong.manggo.widget.FixRefreshLayout>
</LinearLayout>